2006-05-05  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Label.java:
	removed the painting of a border if label begun and ended with a space

2006-05-04  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Canvas.java:
	commented out paint() implementation
	
2006-05-04  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/clib/awt/X/fnt.c:
	fixed seriously broken charWidth implementation
	* libraries/javalib/awt-implementations/kaffe/java/awt/Defaults.java:
	changed default char back to Lucida

2006-05-02  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Font.java:
	added deriveFont() stubs

2006-05-02  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Component.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Container.java:
	fixed Containder add() methods.

2006-04-26  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/LayoutManager.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/LayoutManager2.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/CardLayout.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/BorderLayout.java:
	removed, so to use classath

2006-04-26  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Container.java:
	implemented findComponentAt

2006-04-26  Riccardo Mottola <riccardo@kaffe.org>

	* javalib/awt-implementations/kaffe/java/awt/AWTEvent.java,
	javalib/awt-implementations/kaffe/java/awt/Defaults.java:
	implemented a compliant setSource() in AWTEvent.

2006-04-25  Riccardo Mottola <riccardo@kaffe.org>

	* awt-implementations/kaffe/java/awt/event/HierarchyBoundsAdapter.java,
	awt-implementations/kaffe/java/awt/event/HierarchyBoundsListener.java,
	awt-implementations/kaffe/java/awt/event/HierarchyEvent.java