@@ -1,3 +1,8 @@
+2006-05-06  Riccardo Mottola <riccardo@kaffe.org>
+
+	* libraries/javalib/awt-implementations/kaffe/java/awt/ScrollPaneAdjustable.java:
+	removed, so to use classath
+
 2006-05-05  Riccardo Mottola <riccardo@kaffe.org>
 
 	* libraries/javalib/awt-implementations/kaffe/java/awt/Label.java:
